--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,7 @@
 <html lang="">
   <head>
     <!--清除浏览器中的缓存 -->
-    <meta><%= htmlWebpackPlugin.options.versiontime %></meta>
-    <meta http-equiv="pragram" content="no-cache" />
+    <meta http-equiv="pragram" content="no-cache" time="<%= htmlWebpackPlugin.options.versiontime %>"/>
     <meta
       http-equiv="cache-control"
       content="no-cache, no-store, must-revalidate"
