--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="template-project"></div>
+    <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
