添加版本时间

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!--清除浏览器中的缓存 -->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <meta http-equiv="pragram" content="no-cache" time="<%= htmlWebpackPlugin.options.versiontime %>" />
+    <meta http-equiv="pragram" content="no-cache" time="<%= versiontime %>" />
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
